# trunk-transcribe

./: .Dockerfile.whispercpp.template  .env.example  .env.testing  .env.testing.local  .gitignore  Dockerfile  Dockerfile.fasterwhisper  Dockerfile.insanelyfastwhisper  Dockerfile.whisper  Dockerfile.whispercpp  Makefile  README.md  alembic.ini  autoscale-vast.py  docker-compose.autoscaler.yml  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.minio.yml  docker-compose.noworker.yml  docker-compose.openai.yml  docker-compose.server.yml  docker-compose.whisper.yml  docker-compose.worker-api.yml  docker-compose.worker-qwen.yml  docker-compose.worker-voxtral.yml  docker-compose.worker-whisper.yml  docker-compose.worker.yml  docker-compose.yml  docker-entrypoint.sh  flowerconfig.py  generate-dockerfiles.sh  init-db.sql  install-whisper.sh  make.sh  pyproject.toml  rabbitmq-timeout.conf  reindex.py  requirements.txt  setup.bat  (+4 more)
.github/: FUNDING.yml
.github/workflows/: docker-publish-worker.yml  docker-publish.yml  run-tests.yml
app/: analog.py  api.py  api_client.py  config.py  conversion.py  crud.py  database.py  db.py  digital.py  exceptions.py  geocoding.py  llm.py  main.py  metadata.py  models.py  notification.py  schemas.py  search.py  storage.py  task.py  telegram.py  transcript.py  whisper.py  worker.py
app/ai/: scanner_chat_web.py  scanner_summary_agent.py
app/alembic/: env.py
app/alembic/versions/: 09874b204f9e_add_columns_to_calls_table.py  17dc425f0a6a_add_indexes_to_calls_table.py  5e1d5f2f7c4b_add_talkgroup_search_materialized_view.py  71fea3333d68_create_calls_table.py
app/api/: main.py
app/api/routes/: calls.py  chatbot.py  talkgroups.py  tasks.py  websocket.py
app/geocoding/: exceptions.py  geocoding.py  llm.py  routing.py
app/models/: call.py  database.py  metadata.py  models.py  transcript.py
app/notification_plugins/: NotifyTelegram.py
app/notifications/: config.py  notification.py
app/radio/: analog.py  digital.py
app/search/: adapters.py  helpers.py  search.py  search_typesense.py  url.py
app/utils/: api_client.py  cache.py  conversion.py  exceptions.py  storage.py
app/whisper/: base.py  config.py  deepgram.py  exceptions.py  faster_whisper.py  openai.py  task.py  transcribe.py  whisper.py  whisper_asr_api.py  whisper_cpp.py  whisper_s2t.py
backend/: .env.testing.local  README.md  pyproject.toml
backend/app/: main.py  worker.py
backend/app/alembic/: env.py
backend/app/api/: depends.py  main.py
backend/app/asr_pool/: __init__.py  vast.py
backend/app/asr_router/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  db.py  transcription_profiles.py
backend/app/geocoding/: types.py
backend/app/models/: database.py  metadata.py
backend/app/notifications/: notification.py
backend/app/radio/: analog.py  digital.py
backend/app/search/: helpers.py
backend/app/utils/: api_client.py  storage.py
backend/app/whisper/: base.py  config.py  deepinfra.py  task.py  transcribe.py  whisper.py  whisper_asr_api.py  whisper_cpp.py  whisper_s2t.py
backend/scripts/: autoscale-vast.py  format.sh  lint.sh  migrate-from-meilisearch-to-typesense.py  test.sh  tests-start.sh  transcribe.py
backend/tests/: test_e2e.py  test_worker_routing.py
backend/tests/ai/: test_scanner_chat_web.py
backend/tests/api/: test_routes.py
backend/tests/core/: test_config.py
backend/tests/data/: hallucination_transcript_export.csv
backend/tests/geocoding/: test_extract_address.py  test_geocoding.py
backend/tests/models/: test_talkgroup_search.py  test_transcript.py
backend/tests/notification/: test_notification.py
backend/tests/radio/: test_digital.py  test_options.py
backend/tests/search/: test_adapters.py  (+1 more)
config/: channels.json  flowerconfig.py  notifications.json.example  radio-ids.json  telegram-channels.json  transcript_cleanup.json  whisper.json.example  whisper.json.testing
docker/: .Dockerfile.whispercpp.template  Dockerfile  Dockerfile.fasterwhisper  Dockerfile.whisper  Dockerfile.whispercpp  Dockerfile.whispers2t  celery-healthcheck.sh  docker-entrypoint.sh  generate-dockerfiles.sh  haproxy.cfg  healthcheck.sh  init-db.sql  install-faster-whisper.sh  install-whisper.sh  install-whispers2t.sh  minio-entrypoint.sh
docs/: README.md  adr-2026-04-18-frontend-topology.md  architecture.md  crimeisdown-site-product-spec.md  sirens-linear-execution-plan.md
examples/: ingest-stream.sh  stream_name.json  transcribe.sh
frontend/: .cta.json  .env.example  Dockerfile  README.md  biome.json  next.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/app/: Hit.tsx  Search.tsx  layout.tsx  page.tsx
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
plans/: 2026-03-22-worker-backend-architecture-plan.md  2026-04-15-vast-ai-worker-autoscaling-approaches.md
tests/: test_e2e.py  wait_for_api.py
tests/ai/: test_scanner_chat_web.py  test_scanner_summary_agent.py
tests/api/: test_chatbot_routes.py  test_routes.py
tests/data/: 1-1673118015_477787500-call_1.json  11-1673118186_460378000-call_0.json  9051-1699224861_773043750.0-call_20452.json  hallucinations.json
tests/geocoding/: test_geocoding.py  test_routing.py
tests/integration/: test_e2e.py  test_geocoding.py  test_notification.py  test_routing.py
tests/models/: test_talkgroup_search.py
tests/notification/: test_notification.py
tests/radio/: test_analog.py
tests/search/: test_adapters.py  test_search.py  test_search_typesense.py
tests/unit/: test_analog.py  test_conversion.py  test_notification.py  test_transcript.py  test_whisper.py
tests/utils/: test_conversion.py
tests/whisper/: test_implementations.py  test_local_models_integration.py  test_providers_live.py  test_task_model_selection.py  test_whisper.py
(+68 files in other folders)
